--- a/animarender/Cargo.toml
+++ b/animarender/Cargo.toml
@@ -3,5 +3,10 @@ name = "animarender"
 version = "0.1.0"
 authors = ["Mattias Cibien <mattias@mattiascibien.net>"]
 
+[features]
+native-dialogs = ["nfd"]
+
 [dependencies]
+clap = "2.31"
+nfd = { version = "0.0.4", optional = true }
 anima = { path = "../libanima" }
