feat(libanima): add OpenGL libraries
adds dependencies for opengl rendering using gfx crate and glutin

--- a/libanima/Cargo.toml
+++ b/libanima/Cargo.toml
@@ -3,4 +3,11 @@ name = "anima"
 version = "0.1.0"
 authors = ["Mattias Cibien <mattias@mattiascibien.net>"]
 
+[features]
+default = ["opengl"]
+opengl = ["gfx_window_glutin", "gfx_device_gl"]
+
 [dependencies]
+gfx = "0.17"
+gfx_window_glutin = { version = "0.23", optional= true }
+gfx_device_gl= { version = "0.15", optional= true }
